--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ritesh AI</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>🤖 Ritesh AI</h2>
+  <div class="app">
+    <h1>Ritesh AI 🤖</h1>
 
-  <input id="msg" placeholder="Message likho..." />
-  <button onclick="send()">Send</button>
+    <div id="chat" class="chat"></div>
 
-  <p id="reply"></p>
+    <div class="row">
+      <input id="msg" type="text" placeholder="Type your message..." />
+      <button id="send">Send</button>
+    </div>
 
-  <script>
-    async function send() {
-      const message = document.getElementById("msg").value;
-      document.getElementById("reply").innerText = "Thinking...";
+    <div class="hint">API: <code>/chat</code> • Status: <span id="status">Ready</span></div>
+  </div>
 
-      const res = await fetch("/chat", {   // 🔥 IMPORTANT: /chat
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message })
-      });
-
-      const data = await res.json();
-      document.getElementById("reply").innerText = data.reply;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
