--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ritesh AI Chat</title>
 </head>
 <body>
+
   <h1>Ritesh AI Chat 🤖</h1>
 
-  <div id="chat"></div>
+  <div id="chatBox"></div>
 
-  <input id="msgInput" placeholder="Type message..." />
-  <button type="button" id="sendBtn">Send</button>
+  <input id="userInput" placeholder="Type message..." />
+  <button id="sendBtn">Send</button>
 
   <script src="./script.js"></script>
 </body>
