--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritesh AI Chat</title>
-    <style>
-      body { font-family: Arial, sans-serif; padding: 16px; }
-      #chat { border: 1px solid #ccc; padding: 12px; height: 300px; overflow-y: auto; margin-bottom: 10px; }
-      #msgInput { width: 70%; padding: 8px; }
-      #sendBtn { padding: 8px 12px; }
-      .me { margin: 6px 0; }
-      .ai { margin: 6px 0; color: #0b5; }
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ritesh AI Chat</title>
+  <style>
+    body{font-family:Arial;padding:20px}
+    #chat{border:1px solid #ccc; padding:10px; height:280px; overflow:auto; margin:10px 0}
+    .me{color:#000}
+    .ai{color:#0a6}
+    .err{color:#c00}
+    input{width:70%; padding:8px}
+    button{padding:8px 12px}
+  </style>
+</head>
+<body>
+  <h1>Ritesh AI Chat 🤖</h1>
 
-  <body>
-    <h1>Ritesh AI Chat 🤖</h1>
+  <div id="chat"></div>
 
-    <div id="chat"></div>
+  <input id="msgInput" placeholder="Type message..." />
+  <button id="sendBtn" type="button">Send</button>
 
-    <input id="msgInput" placeholder="Type message..." />
-    <button type="button" id="sendBtn">Send</button>
-
-    <script src="./script.js"></script>
-  </body>
+  <script src="./script.js"></script>
+</body>
 </html>
