--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ritesh AI Chat</title>
   <style>
-    body{font-family:Arial;padding:20px}
-    #chat{border:1px solid #ccc; padding:10px; height:280px; overflow:auto; margin:10px 0}
-    .me{color:#000}
-    .ai{color:#0a6}
-    .err{color:#c00}
-    input{width:70%; padding:8px}
-    button{padding:8px 12px}
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #chat { border: 1px solid #ccc; padding: 12px; height: 280px; overflow-y: auto; margin-bottom: 10px; }
+    .me { margin: 6px 0; }
+    .ai { margin: 6px 0; }
+    input { width: 70%; padding: 8px; }
+    button { padding: 8px 14px; }
   </style>
 </head>
 <body>
