--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ritesh AI Chat</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    #chat { border: 1px solid #ccc; padding: 12px; height: 280px; overflow-y: auto; margin-bottom: 10px; }
-    .me { margin: 6px 0; }
-    .ai { margin: 6px 0; }
-    input { width: 70%; padding: 8px; }
-    button { padding: 8px 14px; }
-  </style>
 </head>
 <body>
-  <h1>Ritesh AI Chat 🤖</h1>
 
-  <div id="chat"></div>
+<h2>Ritesh AI Chat 🤖</h2>
 
-  <input id="msgInput" placeholder="Type message..." />
-  <button id="sendBtn" type="button">Send</button>
+<div id="chat"></div>
 
-  <script src="./script.js"></script>
+<input id="msg" placeholder="Type message..." />
+<button onclick="send()">Send</button>
+
+<script src="script.js"></script>
 </body>
 </html>
