--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ritesh AI Chat</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 720px; margin: 30px auto; padding: 0 12px; }
-    #chat { border: 1px solid #ddd; padding: 12px; height: 360px; overflow-y: auto; border-radius: 8px; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #chat { border: 1px solid #ddd; padding: 12px; height: 320px; overflow-y: auto; margin-bottom: 12px; }
     .msg { margin: 8px 0; }
-    .you { font-weight: 700; }
-    .ai { font-weight: 700; }
-    .row { display: flex; gap: 8px; margin-top: 12px; }
-    input { flex: 1; padding: 10px; border-radius: 8px; border: 1px solid #ccc; }
-    button { padding: 10px 14px; border-radius: 8px; border: 1px solid #333; background: #111; color: #fff; cursor: pointer; }
+    .you { font-weight: bold; }
+    .ai { font-weight: bold; }
+    form { display: flex; gap: 10px; }
+    input { flex: 1; padding: 10px; }
+    button { padding: 10px 16px; cursor: pointer; }
   </style>
 </head>
 <body>
   <h1>Ritesh AI Chat 🤖</h1>
 
-  <div id="chat"></div>
-
-  <div class="row">
-    <input id="msgInput" placeholder="Type message..." />
-    <button id="sendBtn" type="button">Send</button>
+  <div id="chat">
+    <div class="msg"><span class="ai">AI:</span> Ritesh boss, bol kya puchna hai 😄</div>
   </div>
+
+  <!-- ✅ form used ताकि enter pe submit हो, BUT refresh नहीं होगा (script रोक देगा) -->
+  <form id="chatForm">
+    <input id="msgInput" placeholder="Type message..." autocomplete="off" />
+    <button type="submit" id="sendBtn">Send</button>
+  </form>
 
   <script src="./script.js"></script>
 </body>
