--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>Ritesh AI Chat</title>
-</head>
-<body>
-  <h1>Ritesh AI Chat 🤖</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ritesh AI Chat</title>
+  </head>
+  <body>
+    <h1>Ritesh AI Chat 🤖</h1>
 
-  <div id="chat"></div>
+    <div id="chat"></div>
 
-  <input id="msg" placeholder="Type message..." />
-  <button onclick="send()">Send</button>
+    <input id="msg" placeholder="Type message..." />
+    <button onclick="send()">Send</button>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
